// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxSet /> should render a checkbox button set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="undefined-undefined"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="undefined-undefined"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="undefined-undefined"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="undefined-undefined"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set with horizontal buttons 1`] = `
<styled.div
  orientation="horizontal"
>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set with tight spacing 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="undefined-undefined"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="undefined-undefined"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="undefined-undefined"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="undefined-undefined"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;
